Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/be.json
+++ b/public_html/i18n/be.json
@@ -5,6 +5,37 @@
 		]
 	},
 	"feedback": "Зваротная сувязь",
+	"zh-wikipedia": "Кітайская Вікіпедыя",
+	"ja-wikipedia": "Японская Вікіпедыя",
+	"th-wikipedia": "Тайская Вікіпедыя",
+	"en-wikipedia": "Англійская Вікіпедыя",
+	"ko-wikipedia": "Карэйская Вікіпедыя",
+	"ca-wikipedia": "Каталонская Вікіпедыя",
+	"hr-wikipedia": "Харвацкая Вікіпедыя",
+	"cs-wikipedia": "Чэшская Вікіпедыя",
+	"da-wikipedia": "Дацкая Вікіпедыя",
+	"nl-wikipedia": "Нідэрландская Вікіпедыя",
+	"fi-wikipedia": "Фінская Вікіпедыя",
+	"fr-wikipedia": "Французская Вікіпедыя",
+	"de-wikipedia": "Нямецкая Вікіпедыя",
+	"hu-wikipedia": "Венгерская Вікіпедыя",
+	"it-wikipedia": "Італьянская Вікіпедыя",
+	"no-wikipedia": "Нарвежская Вікіпедыя (букмал)",
+	"nn-wikipedia": "Нарвежская Вікіпедыя (нюнорск)",
+	"pl-wikipedia": "Польская Вікіпедыя",
+	"pt-wikipedia": "Партугальская Вікіпедыя",
+	"ro-wikipedia": "Румынская Вікіпедыя",
+	"sr-wikipedia": "Сербская Вікіпедыя",
+	"sk-wikipedia": "Славацкая Вікіпедыя",
+	"sl-wikipedia": "Славенская Вікіпедыя",
+	"es-wikipedia": "Іспанская Вікіпедыя",
+	"sv-wikipedia": "Шведская Вікіпедыя",
+	"ar-wikipedia": "Арабская Вікіпедыя",
+	"el-wikipedia": "Грэчаская Вікіпедыя",
+	"he-wikipedia": "Вікіпедыя на іўрыце",
+	"fa-wikipedia": "Персідская Вікіпедыя",
+	"ru-wikipedia": "Руская Вікіпедыя",
+	"tr-wikipedia": "Турэцкая Вікіпедыя",
 	"login": "Увайсці",
 	"logout": "Выйсці",
 	"header-loggedin": "Вы ўвайшлі як: $1",
