--- a/public_html/i18n/bn.json
+++ b/public_html/i18n/bn.json
@@ -8,8 +8,37 @@
 	"documentation": "নথিপত্র",
 	"feedback": "প্রতিক্রিয়া",
 	"leaderboard": "লিডারবোর্ড",
+	"zh-wikipedia": "চীনা উইকিপিডিয়া",
+	"ja-wikipedia": "জাপানি উইকিপিডিয়া",
+	"th-wikipedia": "থাই উইকিপিডিয়া",
 	"en-wikipedia": "ইংরেজি উইকিপিডিয়া",
+	"ko-wikipedia": "কোরীয় উইকিপিডিয়া",
+	"ca-wikipedia": "কাতালান উইকিপিডিয়া",
+	"hr-wikipedia": "ক্রোয়েশীয় উইকিপিডিয়া",
+	"cs-wikipedia": "চেক উইকিপিডিয়া",
+	"da-wikipedia": "ডেনীয় উইকিপিডিয়া",
+	"nl-wikipedia": "ওলন্দাজ উইকিপিডিয়া",
+	"fi-wikipedia": "ফিনীয় উইকিপিডিয়া",
 	"fr-wikipedia": "ফরাসি উইকিপিডিয়া",
+	"de-wikipedia": "জার্মান উইকিপিডিয়া",
+	"hu-wikipedia": "হাঙ্গেরীয় উইকিপিডিয়া",
+	"it-wikipedia": "ইতালীয় উইকিপিডিয়া",
+	"no-wikipedia": "নরওয়েজীয় উইকিপিডিয়া (বোকমাল)",
+	"nn-wikipedia": "নরওয়েজীয় উইকিপিডিয়া (নিনর্স্ক)",
+	"pl-wikipedia": "পোলিশ উইকিপিডিয়া",
+	"pt-wikipedia": "পর্তুগীজ উইকিপিডিয়া",
+	"ro-wikipedia": "রোমানীয় উইকিপিডিয়া",
+	"sr-wikipedia": "সার্বীয় উইকিপিডিয়া",
+	"sk-wikipedia": "স্লোভাক উইকিপিডিয়া",
+	"sl-wikipedia": "স্লোভেনীয় উইকিপিডিয়া",
+	"es-wikipedia": "স্পেনীয় উইকিপিডিয়া",
+	"sv-wikipedia": "সুইডিশ উইকিপিডিয়া",
+	"ar-wikipedia": "আরবি উইকিপিডিয়া",
+	"el-wikipedia": "গ্রিক উইকিপিডিয়া",
+	"he-wikipedia": "হিব্রু উইকিপিডিয়া",
+	"fa-wikipedia": "ফার্সি উইকিপিডিয়া",
+	"ru-wikipedia": "রুশ উইকিপিডিয়া",
+	"tr-wikipedia": "তুর্কী উইকিপিডিয়া",
 	"login": "প্রবেশ",
 	"logout": "প্রস্থান",
 	"header-loggedin": "আপনি $1 হিসাবে প্রবেশ করেছেন",
