--- a/public_html/i18n/de.json
+++ b/public_html/i18n/de.json
@@ -8,8 +8,37 @@
 	"documentation": "Dokumentation",
 	"feedback": "Rückmeldung",
 	"leaderboard": "Bestenliste",
+	"zh-wikipedia": "Chinesischsprachige Wikipedia",
+	"ja-wikipedia": "Japanischsprachige Wikipedia",
+	"th-wikipedia": "Thailändischsprachige Wikipedia",
 	"en-wikipedia": "Englischsprachige Wikipedia",
+	"ko-wikipedia": "Koreanischsprachige Wikipedia",
+	"ca-wikipedia": "Katalanischsprachige Wikipedia",
+	"hr-wikipedia": "Kroatischsprachige Wikipedia",
+	"cs-wikipedia": "Tschechischsprachige Wikipedia",
+	"da-wikipedia": "Dänischsprachige Wikipedia",
+	"nl-wikipedia": "Niederländischsprachige Wikipedia",
+	"fi-wikipedia": "Finnischsprachige Wikipedia",
 	"fr-wikipedia": "Französischsprachige Wikipedia",
+	"de-wikipedia": "Deutschsprachige Wikipedia",
+	"hu-wikipedia": "Ungarischsprachige Wikipedia",
+	"it-wikipedia": "Italienischsprachige Wikipedia",
+	"no-wikipedia": "Norwegischsprachige Wikipedia (Bokmål)",
+	"nn-wikipedia": "Norwegischsprachige Wikipedia (Nynorsk)",
+	"pl-wikipedia": "Polnischsprachige Wikipedia",
+	"pt-wikipedia": "Portugiesischsprachige Wikipedia",
+	"ro-wikipedia": "Rumänischsprachige Wikipedia",
+	"sr-wikipedia": "Serbischsprachige Wikipedia",
+	"sk-wikipedia": "Slowakischsprachige Wikipedia",
+	"sl-wikipedia": "Slowenischsprachige Wikipedia",
+	"es-wikipedia": "Spanischsprachige Wikipedia",
+	"sv-wikipedia": "Schwedischsprachige Wikipedia",
+	"ar-wikipedia": "Arabischsprachige Wikipedia",
+	"el-wikipedia": "Griechischsprachige Wikipedia",
+	"he-wikipedia": "Hebräischsprachige Wikipedia",
+	"fa-wikipedia": "Persischsprachige Wikipedia",
+	"ru-wikipedia": "Russischsprachige Wikipedia",
+	"tr-wikipedia": "Türkischsprachige Wikipedia",
 	"login": "Anmelden",
 	"logout": "Abmelden",
 	"header-loggedin": "Du bist angemeldet als: $1",
