--- a/public_html/i18n/diq.json
+++ b/public_html/i18n/diq.json
@@ -1,32 +1,40 @@
 {
 	"@metadata": {
 		"authors": [
-			"1917 Ekim Devrimi"
+			"1917 Ekim Devrimi",
+			"Gırd"
 		]
 	},
 	"name": "CopyPatrol",
 	"documentation": "Dokumantasyon",
-	"feedback": "Peydrışten",
+	"feedback": "Peyşınasnayış.",
 	"leaderboard": "Tabloy lideran",
+	"ja-wikipedia": "Wikipediya japonki",
 	"en-wikipedia": "Wikipediya İngilizki",
+	"fi-wikipedia": "Wikipediya Finki",
 	"fr-wikipedia": "Wikipediya Fransızki",
+	"it-wikipedia": "Wikipediya İtalyanki",
+	"no-wikipedia": "Wikipediya Norwecki (Bokmål)",
+	"es-wikipedia": "Wikipediya İspanyolki",
+	"he-wikipedia": "Wikipediya İbraniki",
+	"tr-wikipedia": "Wikipediya Tırkki",
 	"login": "Cıkewtış",
 	"logout": "Veciyayış",
 	"header-loggedin": "$1 nameya şıma ronıştış akerd o.",
 	"form-all": "Weqey pêro",
 	"form-open": "Weqe akerê",
 	"form-reviewed": "weqe kontrol biya",
-	"form-mine": "kontrolê mı",
-	"wikiprojects": "Wikiprojey",
-	"form-wikiprojects-placeholder": "Namey tewra Wikiproji...",
+	"form-mine": "Çımraviyarnayışê mı",
+	"wikiprojects": "Wikiprocey",
+	"form-wikiprojects-placeholder": "Namanê wikiproceyan bınusê...",
 	"page": "Pele",
 	"diff": "Ferq",
 	"editor": "Vurner",
-	"history": "Veror",
-	"talk": "Behs",
+	"history": "Tarix",
+	"talk": "Vatış",
 	"contribs": "İştıraki",
 	"record-editcount": "Hesabi bıvurne:",
-	"compare": "Pêvernayış",
+	"compare": "Têversanayış",
 	"article": "Meqale",
 	"source": "Çıme",
 	"phabricator": "Phabricator",
