--- a/public_html/i18n/es.json
+++ b/public_html/i18n/es.json
@@ -2,15 +2,45 @@
 	"@metadata": {
 		"authors": [
 			"Macofe",
-			"Fitoschido"
+			"Fitoschido",
+			"Kaldari"
 		]
 	},
 	"name": "CopyPatrol",
 	"documentation": "Documentación",
 	"feedback": "Comentarios",
 	"leaderboard": "Tabla de posiciones",
+	"zh-wikipedia": "Wikipedia en chino",
+	"ja-wikipedia": "Wikipedia en japonés",
+	"th-wikipedia": "Wikipedia en tailandés",
 	"en-wikipedia": "Wikipedia en inglés",
+	"ko-wikipedia": "Wikipedia en coreano",
+	"ca-wikipedia": "Wikipedia en catalán",
+	"hr-wikipedia": "Wikipedia en croata",
+	"cs-wikipedia": "Wikipedia en checo",
+	"da-wikipedia": "Wikipedia en danés",
+	"nl-wikipedia": "Wikipedia en neerlandés",
+	"fi-wikipedia": "Wikipedia en finés",
 	"fr-wikipedia": "Wikipedia en francés",
+	"de-wikipedia": "Wikipedia en alemán",
+	"hu-wikipedia": "Wikipedia en húngaro",
+	"it-wikipedia": "Wikipedia en italiano",
+	"no-wikipedia": "Wikipedia en noruego (bokmål)",
+	"nn-wikipedia": "Wikipedia en noruego (nynorsk)",
+	"pl-wikipedia": "Wikipedia en polaco",
+	"pt-wikipedia": "Wikipedia en portugués",
+	"ro-wikipedia": "Wikipedia en rumano",
+	"sr-wikipedia": "Wikipedia en serbio",
+	"sk-wikipedia": "Wikipedia en eslovaco",
+	"sl-wikipedia": "Wikipedia en esloveno",
+	"es-wikipedia": "Wikipedia en español",
+	"sv-wikipedia": "Wikipedia en sueco",
+	"ar-wikipedia": "Wikipedia en árabe",
+	"el-wikipedia": "Wikipedia en griego",
+	"he-wikipedia": "Wikipedia en hebreo",
+	"fa-wikipedia": "Wikipedia en persa",
+	"ru-wikipedia": "Wikipedia en ruso",
+	"tr-wikipedia": "Wikipedia en turco",
 	"login": "Acceder",
 	"logout": "Salir",
 	"header-loggedin": "Has accedido como: $1",
@@ -28,7 +58,7 @@
 	"review": "Revisión",
 	"review-fixed": "Página corregida",
 	"review-fixed-tooltip": "La edición constituía una violación de derechos de autor y fue revertida",
-	"review-false": "No se necesita ninguna acción",
+	"review-false": "No se necesita acción",
 	"review-false-tooltip": "Esta edición es un falso positivo; no se necesita hacer nada al respecto",
 	"review-by": "Revisado por:",
 	"history": "Historial",
