--- a/public_html/i18n/fr.json
+++ b/public_html/i18n/fr.json
@@ -2,15 +2,45 @@
 	"@metadata": {
 		"authors": [
 			"Framawiki",
-			"Wladek92"
+			"Wladek92",
+			"Gomoko"
 		]
 	},
 	"name": "CopyPatrol",
 	"documentation": "Documentation",
 	"feedback": "Avis",
 	"leaderboard": "Tableau des scores",
+	"zh-wikipedia": "Wikipédia en chinois",
+	"ja-wikipedia": "Wikipédia en japonais",
+	"th-wikipedia": "Wikipédia en thaï",
 	"en-wikipedia": "Wikipédia Anglais",
+	"ko-wikipedia": "Wikipédia en coréen",
+	"ca-wikipedia": "Wikipédia en catalan",
+	"hr-wikipedia": "Wikipédia en croate",
+	"cs-wikipedia": "Wikipédia en tchèque",
+	"da-wikipedia": "Wikipédia en danois",
+	"nl-wikipedia": "Wikipédia en hollandais",
+	"fi-wikipedia": "Wikipédia en finnois",
 	"fr-wikipedia": "Wikipédia Français",
+	"de-wikipedia": "Wikipédia en allemand",
+	"hu-wikipedia": "Wikipédia en hongrois",
+	"it-wikipedia": "Wikipédia en italien",
+	"no-wikipedia": "Wikipédia en norvégien (Bokmål)",
+	"nn-wikipedia": "Wikipédia en norvégien (Nynorsk)",
+	"pl-wikipedia": "Wikipédia en polonais",
+	"pt-wikipedia": "Wikipédia en portugais",
+	"ro-wikipedia": "Wikipédia en roumain",
+	"sr-wikipedia": "Wikipédia en serbe",
+	"sk-wikipedia": "Wikipédia en slovaque",
+	"sl-wikipedia": "Wikipédia en slovène",
+	"es-wikipedia": "Wikipédia en espagnol",
+	"sv-wikipedia": "Wikipédia en suédois",
+	"ar-wikipedia": "Wikipédia en arabe",
+	"el-wikipedia": "Wikipédia en grec",
+	"he-wikipedia": "Wikipédia en hébreu",
+	"fa-wikipedia": "Wikipédia en persan",
+	"ru-wikipedia": "Wikipédia en russe",
+	"tr-wikipedia": "Wikipédia en turc",
 	"login": "Login",
 	"logout": "Déconnexion",
 	"header-loggedin": "Vous êtes connecté en tant que $1",
