--- a/public_html/i18n/hy.json
+++ b/public_html/i18n/hy.json
@@ -6,8 +6,13 @@
 	},
 	"name": "CopyPatrol",
 	"documentation": "Ձեռնարկ",
+	"ja-wikipedia": "Ճապոներեն Վիքիպեդիա",
 	"en-wikipedia": "Անգլերեն Վիքիպեդիա",
+	"fi-wikipedia": "Ֆիններեն Վիքիպեդիա",
 	"fr-wikipedia": "Ֆրանսերեն Վիքիպեդիա",
+	"sl-wikipedia": "Սլովեներեն Վիքիպեդիա",
+	"es-wikipedia": "Իսպաներեն Վիքիպեդիա",
+	"tr-wikipedia": "Թուրքերեն Վիքիպեդիա",
 	"logout": "Դուրս գալ",
 	"header-loggedin": "Դուք մտել եք որպես $1",
 	"form-all": "Բոլոր դեպքերում",
