--- a/public_html/i18n/it.json
+++ b/public_html/i18n/it.json
@@ -7,8 +7,37 @@
 	},
 	"documentation": "Documentazione",
 	"feedback": "Commenti",
+	"zh-wikipedia": "Wikipedia in cinese",
+	"ja-wikipedia": "Wikipedia in giapponese",
+	"th-wikipedia": "Wikipedia in thai",
 	"en-wikipedia": "Wikipedia in inglese",
+	"ko-wikipedia": "Wikipedia in coreano",
+	"ca-wikipedia": "Wikipedia in catalano",
+	"hr-wikipedia": "Wikipedia in croato",
+	"cs-wikipedia": "Wikipedia in ceco",
+	"da-wikipedia": "Wikipedia in danese",
+	"nl-wikipedia": "Wikipedia in olandese",
+	"fi-wikipedia": "Wikipedia in finlandese",
 	"fr-wikipedia": "Wikipedia in francese",
+	"de-wikipedia": "Wikipedia in tedesco",
+	"hu-wikipedia": "Wikipedia in ungherese",
+	"it-wikipedia": "Wikipedia in italiano",
+	"no-wikipedia": "Wikipedia in norvegese (Bokmål)",
+	"nn-wikipedia": "Wikipedia in norvegese (Nynorsk)",
+	"pl-wikipedia": "Wikipedia in polacco",
+	"pt-wikipedia": "Wikipedia in portoghese",
+	"ro-wikipedia": "Wikipedia in rumeno",
+	"sr-wikipedia": "Wikipedia in serbo",
+	"sk-wikipedia": "Wikipedia in slovacco",
+	"sl-wikipedia": "Wikipedia in sloveno",
+	"es-wikipedia": "Wikipedia in spagnolo",
+	"sv-wikipedia": "Wikipedia in svedese",
+	"ar-wikipedia": "Wikipedia in arabo",
+	"el-wikipedia": "Wikipedia in greco",
+	"he-wikipedia": "Wikipedia in ebraico",
+	"fa-wikipedia": "Wikipedia in persiano",
+	"ru-wikipedia": "Wikipedia in russo",
+	"tr-wikipedia": "Wikipedia in turco",
 	"login": "Entra",
 	"logout": "Esci",
 	"header-loggedin": "Hai effettuato l'accesso come: $1",
