--- a/public_html/i18n/ko.json
+++ b/public_html/i18n/ko.json
@@ -6,8 +6,37 @@
 	},
 	"documentation": "설명서",
 	"feedback": "피드백",
+	"zh-wikipedia": "중국어 위키백과",
+	"ja-wikipedia": "일본어 위키백과",
+	"th-wikipedia": "태국어 위키백과",
 	"en-wikipedia": "영어 위키백과",
+	"ko-wikipedia": "한국어 위키백과",
+	"ca-wikipedia": "카탈루냐어 위키백과",
+	"hr-wikipedia": "크로아티아어 위키백과",
+	"cs-wikipedia": "체코어 위키백과",
+	"da-wikipedia": "덴마크어 위키백과",
+	"nl-wikipedia": "네덜란드어 위키백과",
+	"fi-wikipedia": "핀란드어 위키백과",
 	"fr-wikipedia": "프랑스어 위키백과",
+	"de-wikipedia": "독일어 위키백과",
+	"hu-wikipedia": "헝가리어 위키백과",
+	"it-wikipedia": "이탈리아어 위키백과",
+	"no-wikipedia": "노르웨이어 위키백과 (보크몰)",
+	"nn-wikipedia": "노르웨이어 위키백과 (뉘노르스크)",
+	"pl-wikipedia": "폴란드어 위키백과",
+	"pt-wikipedia": "포르투갈어 위키백과",
+	"ro-wikipedia": "루마니아어 위키백과",
+	"sr-wikipedia": "세르비아어 위키백과",
+	"sk-wikipedia": "슬로바키아어 위키백과",
+	"sl-wikipedia": "슬로베니아어 위키백과",
+	"es-wikipedia": "스페인어 위키백과",
+	"sv-wikipedia": "스웨덴어 위키백과",
+	"ar-wikipedia": "아랍어 위키백과",
+	"el-wikipedia": "그리스어 위키백과",
+	"he-wikipedia": "히브리어 위키백과",
+	"fa-wikipedia": "페르시아어 위키백과",
+	"ru-wikipedia": "러시아어 위키백과",
+	"tr-wikipedia": "터키어 위키백과",
 	"login": "로그인",
 	"logout": "로그아웃",
 	"form-drafts": "초안만",
