--- a/public_html/i18n/lb.json
+++ b/public_html/i18n/lb.json
@@ -8,8 +8,37 @@
 	"documentation": "Dokumentatioun",
 	"feedback": "Feedback",
 	"leaderboard": "Tabell vun de Scoren",
+	"zh-wikipedia": "Wikipedia op chinesesch",
+	"ja-wikipedia": "Wikipedia op japanesch",
+	"th-wikipedia": "Wikipedia op thai",
 	"en-wikipedia": "Wikipedia op Englesch",
+	"ko-wikipedia": "Wikipedia op koreanesch",
+	"ca-wikipedia": "Wikipedia op katalanesch",
+	"hr-wikipedia": "Wikipedia op kroatesch",
+	"cs-wikipedia": "Wikipedia op tschechesch",
+	"da-wikipedia": "Wikipedia op dänesch",
+	"nl-wikipedia": "Wikipedia op hollännesch",
+	"fi-wikipedia": "Wikipedia op finnesch",
 	"fr-wikipedia": "Wikipedia op franséisch",
+	"de-wikipedia": "Wikipedia op däitsch",
+	"hu-wikipedia": "Wikipedia op ungaresch",
+	"it-wikipedia": "Wikipedia op italienesch",
+	"no-wikipedia": "Wikipedia op norwegesch (Bokmål)",
+	"nn-wikipedia": "Wikipedia op norwegesch (Nynorsk)",
+	"pl-wikipedia": "Wikipedia op polnesch",
+	"pt-wikipedia": "Wikipedia op portugisesch",
+	"ro-wikipedia": "Wikipedia op rumänesch",
+	"sr-wikipedia": "Wikipedia op serbesch",
+	"sk-wikipedia": "Wikipedia op slowakesch",
+	"sl-wikipedia": "Wikipedia op slowenesch",
+	"es-wikipedia": "Wikipedia op spuenesch",
+	"sv-wikipedia": "Wikipedia op schwedesch",
+	"ar-wikipedia": "Wikipedia op arabesch",
+	"el-wikipedia": "Wikipedia op griichesch",
+	"he-wikipedia": "Wikipedia op hebräesch",
+	"fa-wikipedia": "Wikipedia op persesch",
+	"ru-wikipedia": "Wikipedia op russesch",
+	"tr-wikipedia": "Wikipedia op tierkesch",
 	"login": "Aloggen",
 	"logout": "Ausloggen",
 	"header-loggedin": "Dir sidd ageloggt als: $1",
@@ -35,6 +64,7 @@
 	"contribs": "Kontributiounen",
 	"record-editcount": "Zuel vun den Ännerungen:",
 	"compare": "Vergläichen",
+	"record-ithenticate": "iThenticate-Rapport",
 	"record-url-text": "$1 vun der ännerung ($2 Wierder)",
 	"record-noeditor": "Keen Auteur fonnt",
 	"record-noeditor-tooltip": "D'Versioun kéint geläscht gi sinn oder d'Donnéeë sinn nach net an der Labs-Datebank disponibel.",
