--- a/public_html/i18n/mk.json
+++ b/public_html/i18n/mk.json
@@ -8,8 +8,37 @@
 	"documentation": "Документација",
 	"feedback": "Мислења",
 	"leaderboard": "Предводници",
+	"zh-wikipedia": "Википедија на кинески",
+	"ja-wikipedia": "Википедија на јапонски",
+	"th-wikipedia": "Википедија на тајландски",
 	"en-wikipedia": "Википедија на англиски",
+	"ko-wikipedia": "Википедија на корејски",
+	"ca-wikipedia": "Википедија на каталонски",
+	"hr-wikipedia": "Википедија на хрватски",
+	"cs-wikipedia": "Википедија на чешки",
+	"da-wikipedia": "Википедија на дански",
+	"nl-wikipedia": "Википедија на холандски",
+	"fi-wikipedia": "Википедија на фински",
 	"fr-wikipedia": "Википедија на француски",
+	"de-wikipedia": "Википедија на германски",
+	"hu-wikipedia": "Википедија на унгарски",
+	"it-wikipedia": "Википедија на италијански",
+	"no-wikipedia": "Википедија на норвешки (книжевен)",
+	"nn-wikipedia": "Википедија на норвешки (новонорвешки)",
+	"pl-wikipedia": "Википедија на полски",
+	"pt-wikipedia": "Википедија на португалски",
+	"ro-wikipedia": "Википедија на романски",
+	"sr-wikipedia": "Википедија на српски",
+	"sk-wikipedia": "Википедија на словачки",
+	"sl-wikipedia": "Википедија на словенечки",
+	"es-wikipedia": "Википедија на шпански",
+	"sv-wikipedia": "Википедија на шведски",
+	"ar-wikipedia": "Википедија на арапски",
+	"el-wikipedia": "Википедија на грчки",
+	"he-wikipedia": "Википедија на хебрејски",
+	"fa-wikipedia": "Википедија на персиски",
+	"ru-wikipedia": "Википедија на руски",
+	"tr-wikipedia": "Википедија на турски",
 	"login": "Најава",
 	"logout": "Одјава",
 	"header-loggedin": "Најавени сте како $1.",
