--- a/public_html/i18n/pl.json
+++ b/public_html/i18n/pl.json
@@ -9,8 +9,37 @@
 	"documentation": "Dokumentacja",
 	"feedback": "Opinie",
 	"leaderboard": "Tabela liderów",
+	"zh-wikipedia": "Wikipedia w języku chińskim",
+	"ja-wikipedia": "Wikipedia w języku japońskim",
+	"th-wikipedia": "Wikipedia w języku tajskim",
 	"en-wikipedia": "Wikipedia w języku angielskim",
+	"ko-wikipedia": "Wikipedia w języku koreańskim",
+	"ca-wikipedia": "Wikipedia w języku katalońskim",
+	"hr-wikipedia": "Wikipedia w języku chorwackim",
+	"cs-wikipedia": "Wikipedia w języku czeskim",
+	"da-wikipedia": "Wikipedia w języku duńskim",
+	"nl-wikipedia": "Wikipedia w języku holenderskim",
+	"fi-wikipedia": "Wikipedia w języku fińskim",
 	"fr-wikipedia": "Wikipedia w języku francuskim",
+	"de-wikipedia": "Wikipedia w języku niemieckim",
+	"hu-wikipedia": "Wikipedia w języku węgierskim",
+	"it-wikipedia": "Wikipedia w języku włoskim",
+	"no-wikipedia": "Wikipedia w języku norweskim (Bokmål)",
+	"nn-wikipedia": "Wikipedia w języku norweskim (Nynorsk)",
+	"pl-wikipedia": "Wikipedia w języku polskim",
+	"pt-wikipedia": "Wikipedia w języku portugalskim",
+	"ro-wikipedia": "Wikipedia w języku rumuńskim",
+	"sr-wikipedia": "Wikipedia w języku serbskim",
+	"sk-wikipedia": "Wikipedia w języku słowackim",
+	"sl-wikipedia": "Wikipedia w języku słoweńskim",
+	"es-wikipedia": "Wikipedia w języku hiszpańskim",
+	"sv-wikipedia": "Wikipedia w języku szwedzkim",
+	"ar-wikipedia": "Wikipedia w języku arabskim",
+	"el-wikipedia": "Wikipedia w języku greckim",
+	"he-wikipedia": "Wikipedia w języku hebrajskim",
+	"fa-wikipedia": "Wikipedia w języku perskim",
+	"ru-wikipedia": "Wikipedia w języku rosyjskim",
+	"tr-wikipedia": "Wikipedia w języku tureckim",
 	"login": "Zaloguj się",
 	"logout": "Wyloguj",
 	"header-loggedin": "Jesteś zalogowany jako: $1",
