--- a/public_html/i18n/ru.json
+++ b/public_html/i18n/ru.json
@@ -3,15 +3,41 @@
 		"authors": [
 			"Kareyac",
 			"Irus",
-			"Kaganer"
+			"Kaganer",
+			"Okras"
 		]
 	},
 	"name": "CopyPatrol",
 	"documentation": "Документация",
 	"feedback": "Обратная связь",
 	"leaderboard": "Таблица лидеров",
+	"zh-wikipedia": "Китайская Википедия",
+	"ja-wikipedia": "Японская Википедия",
+	"th-wikipedia": "Тайская Википедия",
 	"en-wikipedia": "Английская Википедия",
+	"ko-wikipedia": "Корейская Википедии",
+	"hr-wikipedia": "Хорватская Википедия",
+	"cs-wikipedia": "Чешская Википедия",
+	"da-wikipedia": "Датская Википедия",
+	"nl-wikipedia": "Голландская Википедия",
+	"fi-wikipedia": "Финская Википедия",
 	"fr-wikipedia": "Французская Википедия",
+	"de-wikipedia": "Немецкая Википедия",
+	"hu-wikipedia": "Венгерская Википедия",
+	"it-wikipedia": "Итальянская Википедия",
+	"pl-wikipedia": "Польская Википедия",
+	"pt-wikipedia": "Португальская Википедия",
+	"ro-wikipedia": "Румынская Википедия",
+	"sr-wikipedia": "Сербская Википедия",
+	"sk-wikipedia": "Словацкая Википедия",
+	"sl-wikipedia": "Словенская Википедия",
+	"es-wikipedia": "Испанская Википедия",
+	"sv-wikipedia": "Шведская Википедия",
+	"ar-wikipedia": "Арабская Википедия",
+	"el-wikipedia": "Греческая Википедия",
+	"fa-wikipedia": "Персидская Википедия",
+	"ru-wikipedia": "Русская Википедия",
+	"tr-wikipedia": "Турецкая Википедия",
 	"login": "Вход",
 	"logout": "Выйти",
 	"header-loggedin": "Вы вошли как $1",
