--- a/public_html/i18n/sv.json
+++ b/public_html/i18n/sv.json
@@ -8,8 +8,37 @@
 	"documentation": "Dokumentation",
 	"feedback": "Återkoppling",
 	"leaderboard": "Topplista",
+	"zh-wikipedia": "Kinesiskspråkiga Wikipedia",
+	"ja-wikipedia": "Japanskspråkiga Wikipedia",
+	"th-wikipedia": "Thailändskspråkiga Wikipedia",
 	"en-wikipedia": "Engelskspråkiga Wikipedia",
+	"ko-wikipedia": "Koreanskspråkiga Wikipedia",
+	"ca-wikipedia": "Katalanskspråkiga Wikipedia",
+	"hr-wikipedia": "Kroatiskspråkiga Wikipedia",
+	"cs-wikipedia": "Tjeckiskspråkiga Wikipedia",
+	"da-wikipedia": "Danskspråkiga Wikipedia",
+	"nl-wikipedia": "Nederländskspråkiga Wikipedia",
+	"fi-wikipedia": "Finskspråkiga Wikipedia",
 	"fr-wikipedia": "Franskspråkiga Wikipedia",
+	"de-wikipedia": "Tyskspråkiga Wikipedia",
+	"hu-wikipedia": "Ungerskspråkiga Wikipedia",
+	"it-wikipedia": "Italienskspråkiga Wikipedia",
+	"no-wikipedia": "Norskspråkiga Wikipedia (Bokmål)",
+	"nn-wikipedia": "Norskspråkiga Wikipedia (Nynorsk)",
+	"pl-wikipedia": "Polskspråkiga Wikipedia",
+	"pt-wikipedia": "Portugisiskspråkiga Wikipedia",
+	"ro-wikipedia": "Rumänskspråkiga Wikipedia",
+	"sr-wikipedia": "Serbiskspråkiga Wikipedia",
+	"sk-wikipedia": "Slovakiskspråkiga Wikipedia",
+	"sl-wikipedia": "Slovenskspråkiga Wikipedia",
+	"es-wikipedia": "Spanskspråkiga Wikipedia",
+	"sv-wikipedia": "Svenskspråkiga Wikipedia",
+	"ar-wikipedia": "Arabiskspråkiga Wikipedia",
+	"el-wikipedia": "Grekiskspråkiga Wikipedia",
+	"he-wikipedia": "Hebreiskspråkiga Wikipedia",
+	"fa-wikipedia": "Persiskspråkiga Wikipedia",
+	"ru-wikipedia": "Ryskspråkiga Wikipedia",
+	"tr-wikipedia": "Turkiskspråkiga Wikipedia",
 	"login": "Logga in",
 	"logout": "Logga ut",
 	"header-loggedin": "Du är inloggad som: $1",
