--- a/public_html/i18n/zh-hans.json
+++ b/public_html/i18n/zh-hans.json
@@ -8,8 +8,37 @@
 	"documentation": "文档",
 	"feedback": "反馈",
 	"leaderboard": "排行榜",
+	"zh-wikipedia": "中文维基百科",
+	"ja-wikipedia": "日语维基百科",
+	"th-wikipedia": "泰语维基百科",
 	"en-wikipedia": "英语维基百科",
+	"ko-wikipedia": "韩语维基百科",
+	"ca-wikipedia": "加泰罗尼亚语维基百科",
+	"hr-wikipedia": "克罗地亚语维基百科",
+	"cs-wikipedia": "捷克语维基百科",
+	"da-wikipedia": "丹麦语维基百科",
+	"nl-wikipedia": "荷兰语维基百科",
+	"fi-wikipedia": "芬兰语维基百科",
 	"fr-wikipedia": "法语维基百科",
+	"de-wikipedia": "德语维基百科",
+	"hu-wikipedia": "匈牙利语维基百科",
+	"it-wikipedia": "意大利语维基百科",
+	"no-wikipedia": "书面挪威语维基百科",
+	"nn-wikipedia": "新挪威语维基百科",
+	"pl-wikipedia": "波兰语维基百科",
+	"pt-wikipedia": "葡萄牙语维基百科",
+	"ro-wikipedia": "罗马尼亚语维基百科",
+	"sr-wikipedia": "塞尔维亚语维基百科",
+	"sk-wikipedia": "斯洛伐克语维基百科",
+	"sl-wikipedia": "斯洛文尼亚语维基百科",
+	"es-wikipedia": "西班牙语维基百科",
+	"sv-wikipedia": "瑞典语维基百科",
+	"ar-wikipedia": "阿拉伯语维基百科",
+	"el-wikipedia": "希腊语维基百科",
+	"he-wikipedia": "希伯来语维基百科",
+	"fa-wikipedia": "波斯语维基百科",
+	"ru-wikipedia": "俄语维基百科",
+	"tr-wikipedia": "土耳其语维基百科",
 	"login": "登录",
 	"logout": "退出",
 	"header-loggedin": "您已作为$1登录",
