--- a/public_html/i18n/zh-hant.json
+++ b/public_html/i18n/zh-hant.json
@@ -8,8 +8,37 @@
 	"documentation": "文件",
 	"feedback": "意見回饋",
 	"leaderboard": "排行榜",
+	"zh-wikipedia": "中文維基百科",
+	"ja-wikipedia": "日語維基百科",
+	"th-wikipedia": "泰語維基百科",
 	"en-wikipedia": "英語維基百科",
+	"ko-wikipedia": "韓語維基百科",
+	"ca-wikipedia": "加泰羅尼亞語維基百科",
+	"hr-wikipedia": "克羅埃西亞語維基百科",
+	"cs-wikipedia": "捷克語維基百科",
+	"da-wikipedia": "丹麥語維基百科",
+	"nl-wikipedia": "荷蘭語維基百科",
+	"fi-wikipedia": "芬蘭語維基百科",
 	"fr-wikipedia": "法語維基百科",
+	"de-wikipedia": "德語維基百科",
+	"hu-wikipedia": "匈牙利語維基百科",
+	"it-wikipedia": "義大利語維基百科",
+	"no-wikipedia": "書面挪威語維基百科",
+	"nn-wikipedia": "新挪威語維基百科",
+	"pl-wikipedia": "波蘭語維基百科",
+	"pt-wikipedia": "葡萄牙語維基百科",
+	"ro-wikipedia": "羅馬尼亞語維基百科",
+	"sr-wikipedia": "塞爾維亞語維基百科",
+	"sk-wikipedia": "斯洛伐克語維基百科",
+	"sl-wikipedia": "斯洛維尼亞語維基百科",
+	"es-wikipedia": "西班牙語維基百科",
+	"sv-wikipedia": "瑞典語維基百科",
+	"ar-wikipedia": "阿拉伯語維基百科",
+	"el-wikipedia": "希臘語維基百科",
+	"he-wikipedia": "希伯來語維基百科",
+	"fa-wikipedia": "波斯語維基百科",
+	"ru-wikipedia": "俄語維基百科",
+	"tr-wikipedia": "土耳其語維基百科",
 	"login": "登入",
 	"logout": "登出",
 	"header-loggedin": "您已登入為：$1",
