Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/cs.json
+++ b/public_html/i18n/cs.json
@@ -9,8 +9,37 @@
 	"documentation": "Dokumentace",
 	"feedback": "Zpětná vazba",
 	"leaderboard": "Žebříček",
+	"zh-wikipedia": "Čínská Wikipedie",
+	"ja-wikipedia": "Japonská Wikipedie",
+	"th-wikipedia": "Thajská Wikipedie",
 	"en-wikipedia": "Anglická Wikipedie",
+	"ko-wikipedia": "Korejská Wikipedie",
+	"ca-wikipedia": "Katalánská Wikipedie",
+	"hr-wikipedia": "Chorvatská Wikipedie",
+	"cs-wikipedia": "Česká Wikipedie",
+	"da-wikipedia": "Dánská Wikipedie",
+	"nl-wikipedia": "Nizozemská Wikipedie",
+	"fi-wikipedia": "Finská Wikipedie",
 	"fr-wikipedia": "Francouzská Wikipedie",
+	"de-wikipedia": "Německá Wikipedie",
+	"hu-wikipedia": "Maďarská Wikipedie",
+	"it-wikipedia": "Italská Wikipedie",
+	"no-wikipedia": "Norská Wikipedie (Bokmål)",
+	"nn-wikipedia": "Norská Wikipedie (Nynorsk)",
+	"pl-wikipedia": "Polská Wikipedie",
+	"pt-wikipedia": "Portugalská Wikipedie",
+	"ro-wikipedia": "Rumunská Wikipedie",
+	"sr-wikipedia": "Srbská Wikipedie",
+	"sk-wikipedia": "Slovenská Wikipedie",
+	"sl-wikipedia": "Slovinská Wikipedie",
+	"es-wikipedia": "Španělská Wikipedie",
+	"sv-wikipedia": "Švédská Wikipedie",
+	"ar-wikipedia": "Arabská Wikipedie",
+	"el-wikipedia": "Řecká Wikipedie",
+	"he-wikipedia": "Hebrejská Wikipedie",
+	"fa-wikipedia": "Perská Wikipedie",
+	"ru-wikipedia": "Ruská Wikipedie",
+	"tr-wikipedia": "Turecká Wikipedie",
 	"login": "Přihlášení",
 	"logout": "Odhlášení",
 	"header-loggedin": "Jste přihlášen jako: $1",
@@ -51,7 +80,7 @@
 	"footer-poweredby": "Poskytují $1 a $2",
 	"source": "Zdroj",
 	"phabricator": "Phabricator",
-	"footer-imageattr": "Autorství obrázku",
+	"footer-imageattr": "Uvedení autorství",
 	"lboard-title": "Výsledky",
 	"lboard-week": "Případy uzavřené v posledních 7 dnech",
 	"lboard-month": "Případy uzavřené v posledních 30 dnech",
@@ -62,8 +91,8 @@
 	"imageattr-logo": "CopyPatrol logo",
 	"public-domain": "volné dílo",
 	"open-font-license": "License Open Font",
-	"imageattr-paragraph1": "$1 je k dispozici $2 s laskavým svolením $3 a $4",
-	"imageattr-paragraph2": "$1 vydané pod $2 s laskavým svolením $3",
+	"imageattr-paragraph1": "$1 je k dispozici jako $2 s laskavým svolením $3 a $4",
+	"imageattr-paragraph2": "$1 bylo vydané pod $2 s laskavým svolením $3",
 	"alert-testing": "Toto je testovací prostředí. Prosím, nevyužívejte tento nástroj pro zaznamenání vašich kontrol, namísto toho prosím využijte $1.",
 	"js-unauthorized": "Před kontrolou článku se musíte přihlásit.",
 	"js-dberror": "Během pokusu o připojení se k databázi nastala chyba.",
