--- a/public_html/i18n/hy.json
+++ b/public_html/i18n/hy.json
@@ -8,10 +8,23 @@
 	"documentation": "Ձեռնարկ",
 	"ja-wikipedia": "Ճապոներեն Վիքիպեդիա",
 	"en-wikipedia": "Անգլերեն Վիքիպեդիա",
+	"hr-wikipedia": "Խորվաթերեն Վիքիպեդիա",
+	"cs-wikipedia": "Չեխերեն Վիքիպեդիա",
+	"da-wikipedia": "Դանիերեն Վիքիպեդիա",
+	"nl-wikipedia": "Հոլանդերեն Վիքիպեդիա",
 	"fi-wikipedia": "Ֆիններեն Վիքիպեդիա",
 	"fr-wikipedia": "Ֆրանսերեն Վիքիպեդիա",
+	"de-wikipedia": "Գերմանտրեն Վիկիպեդիա",
+	"pl-wikipedia": "Լեհերեն Վիքիպեդիա",
+	"pt-wikipedia": "Պորտուգալերեն Վիքիպեդիա",
+	"ro-wikipedia": "Ռումիներեն Վիքիպեդիա",
+	"sr-wikipedia": "Սերբերեն Վիքիպեդիա",
+	"sk-wikipedia": "Սլովակերեն Վիքիպեդիա",
 	"sl-wikipedia": "Սլովեներեն Վիքիպեդիա",
 	"es-wikipedia": "Իսպաներեն Վիքիպեդիա",
+	"sv-wikipedia": "Շվեդերեն Վիքիպեդիա",
+	"ar-wikipedia": "Արաբերեն Վիքիպեդիա",
+	"ru-wikipedia": "Ռուսերեն Վիքիպեդիա",
 	"tr-wikipedia": "Թուրքերեն Վիքիպեդիա",
 	"logout": "Դուրս գալ",
 	"header-loggedin": "Դուք մտել եք որպես $1",
