--- a/public_html/i18n/lt.json
+++ b/public_html/i18n/lt.json
@@ -6,8 +6,37 @@
 	},
 	"documentation": "Dokumentacija",
 	"feedback": "Atsiliepimai",
+	"zh-wikipedia": "Kinų Vikipedija",
+	"ja-wikipedia": "Japonų Vikipedija",
+	"th-wikipedia": "Tajų Vikipedija",
 	"en-wikipedia": "Anglų Vikipedija",
+	"ko-wikipedia": "Korėjiečių Vikipedija",
+	"ca-wikipedia": "Katalonų Vikipedija",
+	"hr-wikipedia": "Kroatų Vikipedija",
+	"cs-wikipedia": "Čekų Vikipedija",
+	"da-wikipedia": "Danų Vikipedija",
+	"nl-wikipedia": "Olandų Vikipedija",
+	"fi-wikipedia": "Suomių Vikipedija",
 	"fr-wikipedia": "Prancūzų Vikipedija",
+	"de-wikipedia": "Vokiečių Vikipedija",
+	"hu-wikipedia": "Vengrų Vikipedija",
+	"it-wikipedia": "Italų Vikipedija",
+	"no-wikipedia": "Norvegų Vikipedija (Bokmål)",
+	"nn-wikipedia": "Norvegų Vikipedija (Nynorsk)",
+	"pl-wikipedia": "Lenkų Vikipedija",
+	"pt-wikipedia": "Portugalų Vikipedija",
+	"ro-wikipedia": "Rumunų Vikipedija",
+	"sr-wikipedia": "Serbų Vikipedija",
+	"sk-wikipedia": "Slovakų Vikipedija",
+	"sl-wikipedia": "Slovėnų Vikipedija",
+	"es-wikipedia": "Ispanų Vikipedija",
+	"sv-wikipedia": "Švedų Vikipedija",
+	"ar-wikipedia": "Arabų Vikipedija",
+	"el-wikipedia": "Graikų Vikipedija",
+	"he-wikipedia": "Hebrajų Vikipedija",
+	"fa-wikipedia": "Persų Vikipedija",
+	"ru-wikipedia": "Rusų Vikipedija",
+	"tr-wikipedia": "Turkų Vikipedija",
 	"login": "Prisijungti",
 	"logout": "Atsijungti",
 	"header-loggedin": "Esate prisijungę kaip: $1",
