--- a/public_html/i18n/ru.json
+++ b/public_html/i18n/ru.json
@@ -16,6 +16,7 @@
 	"th-wikipedia": "Тайская Википедия",
 	"en-wikipedia": "Английская Википедия",
 	"ko-wikipedia": "Корейская Википедии",
+	"ca-wikipedia": "Каталанская Википедия",
 	"hr-wikipedia": "Хорватская Википедия",
 	"cs-wikipedia": "Чешская Википедия",
 	"da-wikipedia": "Датская Википедия",
@@ -25,6 +26,7 @@
 	"de-wikipedia": "Немецкая Википедия",
 	"hu-wikipedia": "Венгерская Википедия",
 	"it-wikipedia": "Итальянская Википедия",
+	"nn-wikipedia": "Норвежская Википедия, Нюнорск (Новонорвежский)",
 	"pl-wikipedia": "Польская Википедия",
 	"pt-wikipedia": "Португальская Википедия",
 	"ro-wikipedia": "Румынская Википедия",
