Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/diq.json
+++ b/public_html/i18n/diq.json
@@ -9,14 +9,36 @@
 	"documentation": "Dokumantasyon",
 	"feedback": "Peyşınasnayış.",
 	"leaderboard": "Tabloy lideran",
+	"zh-wikipedia": "Wikipediya Çinki",
 	"ja-wikipedia": "Wikipediya japonki",
+	"th-wikipedia": "Wikipedia Taiki",
 	"en-wikipedia": "Wikipediya İngilizki",
+	"ko-wikipedia": "Wikipediya Koryaki",
+	"ca-wikipedia": "Wikipediya Katalanki",
+	"hr-wikipedia": "Wikipediya Xırwatki",
+	"cs-wikipedia": "Wikipediya Çekki",
+	"da-wikipedia": "Wikipediya Danki",
+	"nl-wikipedia": "Wikipediya Hollandki",
 	"fi-wikipedia": "Wikipediya Finki",
 	"fr-wikipedia": "Wikipediya Fransızki",
+	"de-wikipedia": "Wikipediya Almanki",
+	"hu-wikipedia": "Wikipediya Macarki",
 	"it-wikipedia": "Wikipediya İtalyanki",
 	"no-wikipedia": "Wikipediya Norwecki (Bokmål)",
+	"nn-wikipedia": "Wikipediya Norwecki (Norsk)",
+	"pl-wikipedia": "Wikipediya Polaxki",
+	"pt-wikipedia": "Wikipediya Portekizki",
+	"ro-wikipedia": "Wikipediya Romenki",
+	"sr-wikipedia": "Wikipediya Sırbki",
+	"sk-wikipedia": "Wikipediya Slovaxki",
+	"sl-wikipedia": "Wikipediya Slovenki",
 	"es-wikipedia": "Wikipediya İspanyolki",
+	"sv-wikipedia": "Wikipediya Svedki",
+	"ar-wikipedia": "Wikipediya Erebki",
+	"el-wikipedia": "Wikipediya Yunanki",
 	"he-wikipedia": "Wikipediya İbraniki",
+	"fa-wikipedia": "Wikipediya Farsi",
+	"ru-wikipedia": "Wikipediya Ruski",
 	"tr-wikipedia": "Wikipediya Tırkki",
 	"login": "Cıkewtış",
 	"logout": "Veciyayış",
