--- a/public_html/i18n/hy.json
+++ b/public_html/i18n/hy.json
@@ -8,6 +8,7 @@
 	"documentation": "Ձեռնարկ",
 	"ja-wikipedia": "Ճապոներեն Վիքիպեդիա",
 	"en-wikipedia": "Անգլերեն Վիքիպեդիա",
+	"ca-wikipedia": "Կատալոներեն Վիքիպեդիա",
 	"hr-wikipedia": "Խորվաթերեն Վիքիպեդիա",
 	"cs-wikipedia": "Չեխերեն Վիքիպեդիա",
 	"da-wikipedia": "Դանիերեն Վիքիպեդիա",
@@ -15,6 +16,8 @@
 	"fi-wikipedia": "Ֆիններեն Վիքիպեդիա",
 	"fr-wikipedia": "Ֆրանսերեն Վիքիպեդիա",
 	"de-wikipedia": "Գերմանտրեն Վիկիպեդիա",
+	"hu-wikipedia": "Հունգարերեն Վիքիպեդիա",
+	"it-wikipedia": "Իտալերեն Վիքիպեդիա",
 	"pl-wikipedia": "Լեհերեն Վիքիպեդիա",
 	"pt-wikipedia": "Պորտուգալերեն Վիքիպեդիա",
 	"ro-wikipedia": "Ռումիներեն Վիքիպեդիա",
