--- a/public_html/i18n/pl.json
+++ b/public_html/i18n/pl.json
@@ -58,6 +58,7 @@
 	"review-fixed": "Strona naprawiona",
 	"review-fixed-tooltip": "Ta edycja naruszała prawa autorskie i została wycofana",
 	"review-false": "Nie jest wymagana żadna akcja",
+	"review-by": "Przejrzane przez:",
 	"history": "Historia",
 	"talk": "Dyskusja",
 	"contribs": "Edycje",
@@ -68,7 +69,12 @@
 	"record-ores": "Wynik ORES: $1",
 	"article": "Artykuł",
 	"compare-article-loading": "Ładowanie wersji artykułu...",
+	"compare-source-loading": "Ładowanie możliwego źródła plagiatu...",
 	"footer-loadmore": "Wczytaj więcej",
+	"footer-nomore": "Nie ma więcej wpisów!",
+	"footer-broughtby": "Stworzone dla Ciebie przez $1",
+	"footer-commtech": "Community Tech",
+	"footer-poweredby": "Wspierane przez $1 oraz $2",
 	"source": "Źródło",
 	"phabricator": "Phabricator",
 	"lboard-title": "Tabela liderów",
