--- a/public_html/i18n/ru.json
+++ b/public_html/i18n/ru.json
@@ -26,6 +26,7 @@
 	"de-wikipedia": "Немецкая Википедия",
 	"hu-wikipedia": "Венгерская Википедия",
 	"it-wikipedia": "Итальянская Википедия",
+	"no-wikipedia": "Норвежская Википедия (Букмол)",
 	"nn-wikipedia": "Норвежская Википедия, Нюнорск (Новонорвежский)",
 	"pl-wikipedia": "Польская Википедия",
 	"pt-wikipedia": "Португальская Википедия",
@@ -37,6 +38,7 @@
 	"sv-wikipedia": "Шведская Википедия",
 	"ar-wikipedia": "Арабская Википедия",
 	"el-wikipedia": "Греческая Википедия",
+	"he-wikipedia": "Ивритская Википедия",
 	"fa-wikipedia": "Персидская Википедия",
 	"ru-wikipedia": "Русская Википедия",
 	"tr-wikipedia": "Турецкая Википедия",
