--- a/public_html/i18n/uk.json
+++ b/public_html/i18n/uk.json
@@ -8,8 +8,37 @@
 	"documentation": "Документація",
 	"feedback": "Зворотний зв'язок",
 	"leaderboard": "Таблиця лідерів",
+	"zh-wikipedia": "Китайська Вікіпедія",
+	"ja-wikipedia": "Японська Вікіпедія",
+	"th-wikipedia": "Тайська Вікіпедія",
 	"en-wikipedia": "Англійська Вікіпедія",
+	"ko-wikipedia": "Корейська Вікіпедія",
+	"ca-wikipedia": "Каталонська Вікіпедія",
+	"hr-wikipedia": "Хорватська Вікіпедія",
+	"cs-wikipedia": "Чеська Вікіпедія",
+	"da-wikipedia": "Данська Вікіпедія",
+	"nl-wikipedia": "Нідерландська Вікіпедія",
+	"fi-wikipedia": "Фінська Вікіпедія",
 	"fr-wikipedia": "French Wikipedia",
+	"de-wikipedia": "Німецька Вікіпедія",
+	"hu-wikipedia": "Угорська Вікіпедія",
+	"it-wikipedia": "Італійська Вікіпедія",
+	"no-wikipedia": "Норвезька Вікіпедія (Букмол)",
+	"nn-wikipedia": "Норвезька Вікіпедія, (Нюношк)",
+	"pl-wikipedia": "Польська Вікіпедія",
+	"pt-wikipedia": "Португальська Вікіпедія",
+	"ro-wikipedia": "Румунська Вікіпедія",
+	"sr-wikipedia": "Сербська Вікіпедія",
+	"sk-wikipedia": "Словацька Вікіпедія",
+	"sl-wikipedia": "Словенська Вікіпедія",
+	"es-wikipedia": "Іспанська Вікіпедія",
+	"sv-wikipedia": "Шведська Вікіпедія",
+	"ar-wikipedia": "Арабська Вікіпедія",
+	"el-wikipedia": "Грецька Вікіпедія",
+	"he-wikipedia": "Вікіпедія івритом",
+	"fa-wikipedia": "Перська Вікіпедія",
+	"ru-wikipedia": "Російська Вікіпедія",
+	"tr-wikipedia": "Турецька Вікіпедія",
 	"login": "Увійти",
 	"logout": "Вийти",
 	"header-loggedin": "Ви увійшли як: $1",
