Localisation updates from https://translatewiki.net.

--- a/public_html/i18n/diq.json
+++ b/public_html/i18n/diq.json
@@ -68,5 +68,5 @@
 	"source": "Çıme",
 	"phabricator": "Phabricator",
 	"lboard-title": "Tabloy lideran",
-	"public-domain": "Malê Şari"
+	"public-domain": "malê şari"
 }
