--- a/public_html/i18n/hy.json
+++ b/public_html/i18n/hy.json
@@ -6,6 +6,7 @@
 	},
 	"name": "CopyPatrol",
 	"documentation": "Ձեռնարկ",
+	"zh-wikipedia": "Չինարենն Վիքիպեդիա",
 	"ja-wikipedia": "Ճապոներեն Վիքիպեդիա",
 	"en-wikipedia": "Անգլերեն Վիքիպեդիա",
 	"ca-wikipedia": "Կատալոներեն Վիքիպեդիա",
@@ -27,6 +28,7 @@
 	"es-wikipedia": "Իսպաներեն Վիքիպեդիա",
 	"sv-wikipedia": "Շվեդերեն Վիքիպեդիա",
 	"ar-wikipedia": "Արաբերեն Վիքիպեդիա",
+	"el-wikipedia": "Հունարեն Վիքիպեդիա",
 	"ru-wikipedia": "Ռուսերեն Վիքիպեդիա",
 	"tr-wikipedia": "Թուրքերեն Վիքիպեդիա",
 	"logout": "Դուրս գալ",
