--- a/public_html/i18n/qqq.json
+++ b/public_html/i18n/qqq.json
@@ -82,10 +82,10 @@
 	"footer-broughtby": "Footer text to indicate author. \n Parameters: $1 - String. Name of the team (community tech).",
 	"footer-commtech": "Footer text - name of team.",
 	"footer-poweredby": "Footer text to highlight sources used for development. \n Parameters: $1 - String('Eranbot', which maintains the database) and $2 - String('Turnitin', the service used for plagiarism detection)",
-	"source": "Footer link to source code for application\n{{Identical|Source}}",
+	"source": "Footer link to source code ('''Not reference source''') for application\n{{Identical|Source}}",
 	"phabricator": "Footer link to phabricator workboard for application",
 	"footer-imageattr": "Footer link to open a pop up box to show attributions for images used in app",
-	"lboard-title": "Page title for leaderboard page",
+	"lboard-title": "Page title for leaderboard page\n{{Identical|Leaderboard}}",
 	"lboard-week": "Column title for number of records closed last week by each person (top 10 only)",
 	"lboard-month": "Column title for number of records closed last month by each person (top 10 only)",
 	"lboard-alltime": "Column title for the total number of records closed by each person (top 10 only)",
