--- a/public_html/i18n/zh-hans.json
+++ b/public_html/i18n/zh-hans.json
@@ -78,7 +78,7 @@
 	"footer-broughtby": "由$1提供给您",
 	"footer-commtech": "社群技术",
 	"footer-poweredby": "由$1和$2提供技术支持",
-	"source": "来源",
+	"source": "源代码",
 	"phabricator": "Phabricator",
 	"footer-imageattr": "图片署名",
 	"lboard-title": "排行榜",
